feat: introduction to new recipe page and fresh webpage look

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <body>
         <h1>COOKIELAND</h1>
 
+        <iframe src="https://giphy.com/embed/NlOODd0gKM97n2yu6Q" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
 
+        <a href="allrecipes/brownies.html">Brownies</a>
     </body>
 </html>
+
