feat:  Updating the first recipe page with all the content needed for the cookie baking production

--- a/allrecipes/brownies.html
+++ b/allrecipes/brownies.html
@@ -3,12 +3,55 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
+        <title>BROWNIES</title>
     </head>
 
     <body>
         <h1>BROWNIES RECIPE</h1>
 
-    
+    <img src="images/brownie.jpg" alt="Brownies with smarties served on a white plate">
+
+    <h2>Description</h2>
+    <p>Brownies with smarties are a delightful family treat that kids will love. Try our easy chocolate brownie recipe for a gooey, soft dessert, with colourful smarties that melt in your mouth.</p>
+  
+    <h2>Serving: 32</h2>
+    <p>(28.8g per brownie - number of servings equivalent to one tray bake.)</p>
+
+    <h2>Cooking time: 45 minutes</h2>
+
+    <h2>You'll Need the following Ingredients:</h2>
+    <ul>
+        <li>60g Smarties</li>
+        <li>185g light buttery spread</li>
+        <li>160g dark chocolate</li>
+        <li>110g plain flour</li>
+        <li>3 medium eggs</li>
+        <li>1/2 teaspoon vanilla essence</li>
+        <li>250g caster sugar</li>
+        <li>20cm square tin</li>
+        
+    </ul>
+
+    <h2>Smarties Chocolate Brownie Recipe in Easy Steps</h2>
+    <ol>
+        <li>Cut light buttery spread into smallish cubes and tip into a medium bowl</li>
+        <li>Break the dark chocolate into small pieces and drop into the bowl</li>
+        <li>Fill a small saucepan about a quarter full with hot water, then sit the bowl on top so it rests on the rim of the pan, not touching the water</li>
+        <li>Keep over a low heat until the butter and chocolate have melted, stirring occasionally to mix them. Now remove the bowl from the pan</li>
+        <li>Leave the melted mixture to cool to room temperature</li>
+        <li>Turn the oven to 180C/356F/Gas mark 4, while the chocolate cools</li>
+        <li>Using a shallow 20cm square tin, cut out a square of non-stick baking parchment to line the base. Sieve the plain flour into a medium bowl</li>
+        <li>Break the eggs into a large bowl and tip in the golden caster sugar</li>
+        <li>Whisk the eggs and sugar until thick and creamy</li>
+        <li>Pour the cooled chocolate and butter mixture over the egg mix, then gently fold together with a rubber spatula</li>
+        <li>Hold the sieve over the bowl of egg/chocolate mixture and sift the flour, gently folding in. Then add the Smarties and mix well</li>
+        <li>Pour the mixture into the prepared tin</li>
+        <li>Put in the oven and set your timer for 25 minutes, until the top has a shiny, papery crust and the sides are just beginning to come away from the tin</li>
+        <li>Leave in the tin until completely cold</li>
+        <li>Note: number of servings equivalent to one tray bake</li>
+    </ol>
+    <h2>Smart Tips to Involve Little Smarty Pants:</h2>
+    <p>This is such an easy chocolate brownie recipe that even kids can join in. Why not let them pour the Smarties into the mixture? They’ll love the waterfall of colour! Make sure you keep an eye on hazard hotspots in the kitchen including sharp objects or hot surfaces.</p>
 
     </body>
 </html>
