--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
+        <title>COOKIELAND</title>
     </head>
 
     <body>
         <h1>COOKIELAND</h1>
 
-        <iframe src="https://giphy.com/embed/NlOODd0gKM97n2yu6Q" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+        <img src="allrecipes/images/cookie.gif" alt="A GIF depicting various cookies">
 
         <a href="allrecipes/brownies.html">Brownies</a>
     </body>
