feat: Final status with more recipes, deployment end result

--- a/allrecipes/brownies.html
+++ b/allrecipes/brownies.html
@@ -53,6 +53,8 @@
     <h2>Smart Tips to Involve Little Smarty Pants:</h2>
     <p>This is such an easy chocolate brownie recipe that even kids can join in. Why not let them pour the Smarties into the mixture? They’ll love the waterfall of colour! Make sure you keep an eye on hazard hotspots in the kitchen including sharp objects or hot surfaces.</p>
 
+
+    <a href="../index.html"><strong>Recipes Homepage </strong> </a>
     </body>
 </html>
 
