--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     </head>
 
     <body>
+
         <h1>COOKIELAND</h1>
 
         <img src="allrecipes/images/cookie.gif" alt="A GIF depicting various cookies">
 
-        <a href="allrecipes/brownies.html">Brownies</a>
+    <h2>Welcome to Cookieland</h2>
+
+    <p>It’s always time for a cookie! Find the recipe that's right for you and your occasion. From Chocolate Chip Cookies to delicious Oreos and everything in between, Cookieland got you covered!</p>
+
+    <h2>Cookies Recipes</h2>
+        <ul>
+            <li><a href="allrecipes/brownies.html">Brownies</a></li>
+            <li><a href="allrecipes/oreo.html">Oreo</a></li>
+            <li><a href="allrecipes/chocochip.html">ChocoChip</a></li>
+            
+        </ul>
+        
     </body>
 </html>
 
