feat: Implementing CSS and adding some visual changes

--- a/allrecipes/brownies.html
+++ b/allrecipes/brownies.html
@@ -4,12 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>BROWNIES</title>
+
+        <link rel="stylesheet" href="cstyle.css">
     </head>
 
     <body>
         <h1>BROWNIES RECIPE</h1>
 
-    <img src="images/brownie.jpg" alt="Brownies with smarties served on a white plate">
+    <img class="brw" src="images/brownie2.jpg" alt="Brownies with smarties served on a white plate">
+    <img class="brw" src="images/brownie.jpg" alt="Brownies with smarties served on a white plate">
+    <img class="brw" src="images/brownie3.jpg" alt="Brownies with smarties served on a white plate">
 
     <h2>Description</h2>
     <p>Brownies with smarties are a delightful family treat that kids will love. Try our easy chocolate brownie recipe for a gooey, soft dessert, with colourful smarties that melt in your mouth.</p>
@@ -54,7 +58,7 @@
     <p>This is such an easy chocolate brownie recipe that even kids can join in. Why not let them pour the Smarties into the mixture? They’ll love the waterfall of colour! Make sure you keep an eye on hazard hotspots in the kitchen including sharp objects or hot surfaces.</p>
 
 
-    <a href="../index.html"><strong>Recipes Homepage </strong> </a>
+    <a class="back" href="../index.html"><strong>Recipes Homepage </strong> </a>
     </body>
 </html>
 
