--- a/allrecipes/chocochip.html
+++ b/allrecipes/chocochip.html
@@ -4,12 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>CHOCOCHIP</title>
+
+        <link rel="stylesheet" href="cstyle.css">
+
     </head>
 
     <body>
         <h1>CHOCOCHIP RECIPE</h1>
 
-    <img src="images/chocochip.jpg" alt="A ChocoChip">
+    <img class="chip1" src="images/chocochip2.jpg" alt="A ChocoChip">
+    <img class="chip1" src="images/chocochip.jpg" alt="A ChocoChip">
+    <img class="chip1" src="images/chocochip3.jpg" alt="A ChocoChip">
 
     <h2>Description</h2>
     <p>This is the best chocolate chip cookies recipe ever! No funny ingredients, no chilling time, etc. Just a simple, straightforward, amazingly delicious, doughy yet still fully cooked, chocolate chip cookie that turns out perfectly every single time! </p>
@@ -44,7 +49,7 @@
         
     </ol>
     
-    <a href="../index.html"><strong>Recipes Homepage </strong> </a>
+    <a class="back" href="../index.html"><strong>Recipes Homepage </strong> </a>
     </body>
 </html>
 
