--- a/allrecipes/oreo.html
+++ b/allrecipes/oreo.html
@@ -4,12 +4,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>OREO</title>
+
+        <link rel="stylesheet" href="cstyle.css">
+
     </head>
 
     <body>
         <h1>OREO RECIPE</h1>
 
-    <img src="images/oreo.jpg" alt="An Oreo">
+    <img class="oreo" src="images/oreo3.jpg" alt="An Oreo">
+    <img class="oreo" src="images/oreo.jpg" alt="An Oreo">
+    <img class="oreo" src="images/oreo2.jpg" alt="An Oreo">
+    
 
     <h2>Description</h2>
     <p>Make your own version of the classic cookie with this recipe. The chocolate cookie is sandwiched with a creamy filling for a delicious treat.</p>
@@ -49,7 +55,7 @@
         <li>Serve with a glass of milk</li>
     </ol>
     
-    <a href="../index.html"><strong>Recipes Homepage </strong> </a>
+    <a class="back" href="../index.html"><strong>Recipes Homepage </strong> </a>
     </body>
 </html>
 
